EDGOAIPMH-122 - Tech Debt: enable check-style plugin (#129)
* EDGOAIPMH-122 Applied plugin