@@ -4,14 +4,13 @@ import static org.apache.commons.lang3.ObjectUtils.isEmpty;
 
 import io.vertx.core.Future;
 import io.vertx.core.MultiMap;
+import java.util.Collections;
+import java.util.List;
 import lombok.extern.slf4j.Slf4j;
 import org.folio.edge.core.utils.OkapiClient;
 import org.folio.rest.jaxrs.model.ConsortiumCollection;
 import org.folio.rest.jaxrs.model.Tenant;
 import org.folio.rest.jaxrs.model.TenantCollection;
-
-import java.util.Collections;
-import java.util.List;
 
 @Slf4j
 public class ConsortiaClient extends OkapiClient {
@@ -24,22 +23,26 @@ public class ConsortiaClient extends OkapiClient {
 
   public Future<List<String>> getTenantList(String initialTenant, MultiMap headers) {
     return get(okapiURL + CONSORTIA_ENDPOINT, tenant, headers)
-      .map(resp -> resp.bodyAsJson(ConsortiumCollection.class))
-      .compose(collection -> processConsortiaCollection(collection, initialTenant, headers));
+              .map(resp -> resp.bodyAsJson(ConsortiumCollection.class))
+              .compose(collection -> processConsortiaCollection(collection,
+                    initialTenant, headers));
   }
 
-  private Future<List<String>> processConsortiaCollection(ConsortiumCollection collection, String initialTenant, MultiMap headers) {
+  private Future<List<String>> processConsortiaCollection(ConsortiumCollection collection,
+                                                          String initialTenant, MultiMap headers) {
     var consortia = collection.getConsortia();
     if (isEmpty(consortia)) {
       return Future.succeededFuture(Collections.singletonList(initialTenant));
     }
-    var consortiaId = consortia.get(0).getId();
-    return get(okapiURL + String.format(CONSORTIA_TENANTS_ENDPOINT_TEMPLATE + Integer.MAX_VALUE, consortiaId), tenant, headers)
-      .map(resp -> resp.bodyAsJson(TenantCollection.class))
-      .map(TenantCollection::getTenants)
-      .map(tenants -> tenants.stream()
-        .filter(t -> !t.getIsCentral())
-        .map(Tenant::getId)
-        .sorted().toList());
+    var consortiaId = consortia.getFirst().getId();
+    return get(okapiURL + String.format(CONSORTIA_TENANTS_ENDPOINT_TEMPLATE + Integer.MAX_VALUE,
+                consortiaId),
+          tenant, headers)
+              .map(resp -> resp.bodyAsJson(TenantCollection.class))
+              .map(TenantCollection::getTenants)
+              .map(tenants -> tenants.stream()
+                    .filter(t -> !t.getIsCentral())
+                    .map(Tenant::getId)
+                    .sorted().toList());
   }
 }
